--- a/cluster_and_tagging.ipynb
+++ b/cluster_and_tagging.ipynb
@@ -19,6 +19,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f35d0f25",
+   "metadata": {},
+   "source": [
+    "### Load csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "84d1ef2e",
@@ -68,6 +76,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0873c251",
+   "metadata": {},
+   "source": [
+    "### Standardize variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "31f6a5fd",
@@ -101,6 +117,14 @@
     "\n",
     "optimal_k = max(sil_scores, key=sil_scores.get)\n",
     "print(f\"Optimal number of clusters (diet types): {optimal_k} (Silhouette = {sil_scores[optimal_k]:.3f})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c4adec5",
+   "metadata": {},
+   "source": [
+    "### Perform k-Means clustering with optimal number of clusters"
    ]
   },
   {
@@ -703,6 +727,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d50df7e",
+   "metadata": {},
+   "source": [
+    "### Tag food items with selected clusters and also add vegetarian diet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "746fe25d",
@@ -1208,7 +1240,7 @@
    "id": "ba5c04a5",
    "metadata": {},
    "source": [
-    "### Add tagging for \"high in {nutrient}\" and \"low in {nutrient}\" for the top and bottom 10%"
+    "### Add tagging for \"high in {nutrient}\" and \"low in {nutrient}\" for the top and bottom 5%"
    ]
   },
   {
@@ -1759,372 +1791,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb0d4b95",
+   "metadata": {},
+   "source": [
+    "### Save as CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "4d2e1769",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.to_csv(\"final_dataset.csv\", index=False)"
+    "#df_clean.to_csv(\"final_dataset.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "1c802d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
+    "#df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "363c0ff7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean_demo = pd.read_csv(\"final_dataset_demo.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "158935aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NEVO-code</th>\n",
-       "      <th>food_name</th>\n",
-       "      <th>FAT (g)</th>\n",
-       "      <th>PROT (g)</th>\n",
-       "      <th>Calories (kcal)</th>\n",
-       "      <th>VITB12 (µg)</th>\n",
-       "      <th>VITD (µg)</th>\n",
-       "      <th>VITC (mg)</th>\n",
-       "      <th>Iron (mg)</th>\n",
-       "      <th>food_wheel_group</th>\n",
-       "      <th>food_wheel_subgroup</th>\n",
-       "      <th>diet_label</th>\n",
-       "      <th>benefit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Potatoes raw</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>['Low in FAT (g)', 'High in VITC (mg)']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Potatoes new raw</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>['Low in FAT (g)', 'High in VITC (mg)']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Potatoes old raw</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>['Low in FAT (g)']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Pasta white raw</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>12.3</td>\n",
-       "      <td>356.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Rice white raw</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>352.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1522</th>\n",
-       "      <td>5573</td>\n",
-       "      <td>Tempeh unprepared</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>17.6</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>Dairy, nuts, fish, legumes, meat and eggs</td>\n",
-       "      <td>Fish, legumes, meat and eggs</td>\n",
-       "      <td>['Continental Diet', 'Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1523</th>\n",
-       "      <td>5574</td>\n",
-       "      <td>Bakery mix for doughnuts Dutch style</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>367.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1524</th>\n",
-       "      <td>5575</td>\n",
-       "      <td>Cheese 35+</td>\n",
-       "      <td>20.4</td>\n",
-       "      <td>27.3</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>1.81</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Dairy, nuts, fish, legumes, meat and eggs</td>\n",
-       "      <td>Dairy</td>\n",
-       "      <td>['Vegetarian']</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1525</th>\n",
-       "      <td>5576</td>\n",
-       "      <td>Flour spelt</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>13.2</td>\n",
-       "      <td>348.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.8</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Vegetarian', 'Plant-Focused Flexitarian Diet']</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1526</th>\n",
-       "      <td>5577</td>\n",
-       "      <td>Flour spelt wholemeal</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>332.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>Bread, grain/cereal products and potatoes</td>\n",
-       "      <td>['Continental Diet', 'Vegetarian']</td>\n",
-       "      <td>['High in PROT (g)']</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1527 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      NEVO-code                             food_name  FAT (g)  PROT (g)  \\\n",
-       "0             1                          Potatoes raw      0.0       2.0   \n",
-       "1             2                      Potatoes new raw      0.0       2.0   \n",
-       "2             3                      Potatoes old raw      0.0       2.0   \n",
-       "3             4                       Pasta white raw      1.5      12.3   \n",
-       "4             5                        Rice white raw      1.0       7.0   \n",
-       "...         ...                                   ...      ...       ...   \n",
-       "1522       5573                     Tempeh unprepared      4.7      17.6   \n",
-       "1523       5574  Bakery mix for doughnuts Dutch style      1.0      11.0   \n",
-       "1524       5575                            Cheese 35+     20.4      27.3   \n",
-       "1525       5576                           Flour spelt      1.7      13.2   \n",
-       "1526       5577                 Flour spelt wholemeal      2.3      14.4   \n",
-       "\n",
-       "      Calories (kcal)  VITB12 (µg)  VITD (µg)  VITC (mg)  Iron (mg)  \\\n",
-       "0                88.0         0.00        0.0       14.0        0.5   \n",
-       "1                88.0         0.00        0.0       25.0        0.5   \n",
-       "2                88.0         0.00        0.0        5.0        0.5   \n",
-       "3               356.0         0.00        0.0        0.0        2.0   \n",
-       "4               352.0         0.00        0.0        0.0        0.4   \n",
-       "...               ...          ...        ...        ...        ...   \n",
-       "1522            128.0         0.02        0.0        0.0        1.7   \n",
-       "1523            367.0         0.00        0.0        0.0        1.0   \n",
-       "1524            302.0         1.81        0.3        1.0        0.2   \n",
-       "1525            348.0         0.00        0.0       10.8        1.6   \n",
-       "1526            332.0         0.00        0.0        0.0        3.8   \n",
-       "\n",
-       "                               food_wheel_group  \\\n",
-       "0     Bread, grain/cereal products and potatoes   \n",
-       "1     Bread, grain/cereal products and potatoes   \n",
-       "2     Bread, grain/cereal products and potatoes   \n",
-       "3     Bread, grain/cereal products and potatoes   \n",
-       "4     Bread, grain/cereal products and potatoes   \n",
-       "...                                         ...   \n",
-       "1522  Dairy, nuts, fish, legumes, meat and eggs   \n",
-       "1523  Bread, grain/cereal products and potatoes   \n",
-       "1524  Dairy, nuts, fish, legumes, meat and eggs   \n",
-       "1525  Bread, grain/cereal products and potatoes   \n",
-       "1526  Bread, grain/cereal products and potatoes   \n",
-       "\n",
-       "                            food_wheel_subgroup  \\\n",
-       "0     Bread, grain/cereal products and potatoes   \n",
-       "1     Bread, grain/cereal products and potatoes   \n",
-       "2     Bread, grain/cereal products and potatoes   \n",
-       "3     Bread, grain/cereal products and potatoes   \n",
-       "4     Bread, grain/cereal products and potatoes   \n",
-       "...                                         ...   \n",
-       "1522               Fish, legumes, meat and eggs   \n",
-       "1523  Bread, grain/cereal products and potatoes   \n",
-       "1524                                      Dairy   \n",
-       "1525  Bread, grain/cereal products and potatoes   \n",
-       "1526  Bread, grain/cereal products and potatoes   \n",
-       "\n",
-       "                                            diet_label  \\\n",
-       "0     ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "1     ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "2     ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "3     ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "4     ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "...                                                ...   \n",
-       "1522                ['Continental Diet', 'Vegetarian']   \n",
-       "1523  ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "1524                                    ['Vegetarian']   \n",
-       "1525  ['Vegetarian', 'Plant-Focused Flexitarian Diet']   \n",
-       "1526                ['Continental Diet', 'Vegetarian']   \n",
-       "\n",
-       "                                      benefit  \n",
-       "0     ['Low in FAT (g)', 'High in VITC (mg)']  \n",
-       "1     ['Low in FAT (g)', 'High in VITC (mg)']  \n",
-       "2                          ['Low in FAT (g)']  \n",
-       "3                                         NaN  \n",
-       "4                                         NaN  \n",
-       "...                                       ...  \n",
-       "1522                                      NaN  \n",
-       "1523                                      NaN  \n",
-       "1524                                      NaN  \n",
-       "1525                                      NaN  \n",
-       "1526                     ['High in PROT (g)']  \n",
-       "\n",
-       "[1527 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_clean_demo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "0d517f19",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['NEVO-code', 'food_name', 'FAT (g)', 'PROT (g)', 'Calories (kcal)',\n",
-       "       'VITB12 (µg)', 'VITD (µg)', 'VITC (mg)', 'Iron (mg)',\n",
-       "       'food_wheel_group', 'food_wheel_subgroup', 'diet_label', 'benefit'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_clean_demo.columns"
+    "#df_clean_demo = pd.read_csv(\"final_dataset_demo.csv\")"
    ]
   }
  ],
