--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -1096,12 +1096,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d2c372c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_data.to_csv('clean_data.csv', index=False)"
+    "#clean_data.to_csv('clean_data.csv', index=False)"
    ]
   }
  ],
