--- a/queries.ipynb
+++ b/queries.ipynb
@@ -189,6 +189,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de4311fb",
+   "metadata": {},
+   "source": [
+    "### Run queries and save as JSON"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2569b3a2",
@@ -281,6 +289,14 @@
     "    with open(\"all_foods.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(data, f, indent=2, ensure_ascii=False)\n",
     "    print(f\"Saved {len(data)} rows to {filename}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa65dbf",
+   "metadata": {},
+   "source": [
+    "### Convert JSON to ts for website"
    ]
   },
   {
