--- a/rdf_file.ipynb
+++ b/rdf_file.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f9b09e1",
+   "metadata": {},
+   "source": [
+    "### Generate RDF file from CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "aca2bcb5",
@@ -25,10 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7a75ac47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RDF file generated: food_nutrition.rdf\n",
+      "RDF Turtle file generated: food_nutrition.ttl\n"
+     ]
+    }
+   ],
    "source": [
     "# RDF Namespaces\n",
     "FN = Namespace(\"http://example.org/food-nutrition#\")\n",
