--- a/queries.ipynb
+++ b/queries.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8c04e29d",
+   "metadata": {},
+   "source": [
+    "### Executing SPARQL queries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5b4ad62b",
